--- a/awoyou/src/address.html
+++ b/awoyou/src/address.html
@@ -8,7 +8,7 @@
 		<script src="lib/js/vue-2.5.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
-		<div class="title bgdark padding">			
+		<div class="title bgdark padding">
 			<p class="text-center light fz18">我的地址<button class="btn fright pmore"></button></p>
 		</div>
 		<div class="bgf5 ">
@@ -25,7 +25,7 @@
 					<div class="fleft">
 						<input type="checkbox" checked/>默认地址					
 					</div>
-				</p>			
+				</div>
 			</div>
 		</div>
 		<div class="bgf5 padtop10">
@@ -37,17 +37,17 @@
 				<div class="bortp oh padtb10 color68">
 					<div class="fright address_del">
 						<img src="static/images/edit.png" class="marlr5	"/><span>编辑</span>
-						<img src="static/images/delete.png" class="marlr5	"/><span>删除</span>		
+						<img src="static/images/delete.png" class="marlr5	"/><span>删除</span>
 					</div>
 					<div class="fleft">
 						<input type="checkbox" checked/>默认地址					
 					</div>
-				</p>			
+				</div>
 			</div>
 		</div>
-		
+
 	</body>	
-	<script src="lib/js/vue.js" type="text/javascript" charset="utf-8"></script>
+
 	<script type="text/javascript">
 		new Vue({
 			
