--- a/awoyou/src/index.html
+++ b/awoyou/src/index.html
@@ -6,6 +6,15 @@
 		<title></title>
 	</head>
 	<body>
-		hello the world!
+	<a href="address.html">收货地址</a>
+	<a href="discount.html">优惠券</a>
+	<a href="editaddress.html">编辑地址</a>
+	<a href="myorder.html">我的订购</a>
+	<a href="score.html">我的积分</a>
+	<a href="paysuccess.html">支付成功</a>
+	<a href="payfailure.html">支付失败</a>
+	<a href="person.html">个人中心</a>
+	<a href="shopcart.html">购物车</a>
+	<a href="index.html">首页</a>
 	</body>
 </html>
