--- a/awoyou/src/shopcart.html
+++ b/awoyou/src/shopcart.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,7 @@
     <script src="lib/js/vue-2.5.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
+wishicuigaojie
 
         <div class="title bgdark padding">
             <p class="text-center light fz18">购物车<button class="btn fright pmore"></button></p>
