--- a/awoyou/src/index.html
+++ b/awoyou/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -15,6 +15,7 @@
 	<a href="payfailure.html">支付失败</a>
 	<a href="person.html">个人中心</a>
 	<a href="shopcart.html">购物车</a>
+	<a href="index.html">首页</a>
 	<a href="index.html">首页</a>
 	</body>
 </html>
