--- a/awoyou/src/address.html
+++ b/awoyou/src/address.html
@@ -8,9 +8,9 @@
 		<script src="lib/js/vue-2.5.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
-	好单
+
 		<div class="title bgdark padding">
-			<p class="text-center light fz18">我的地址<button class="btn fright pmore"></button></p>
+			<p class="text-center light fz18"><span class="fleft pback"></span>我的地址</p>
 		</div>
 		<div class="bgf5 ">
 			<div class="bglight padding">
