--- a/awoyou/src/index.html
+++ b/awoyou/src/index.html
@@ -9,7 +9,7 @@
 	<a href="address.html">收货地址</a>
 	<a href="discount.html">优惠券</a>
 	<a href="editaddress.html">编辑地址</a>
-	<a href="myorder.html">我的订购</a>
+	<a href="order_topay.html">我的订购</a>
 	<a href="score.html">我的积分</a>
 	<a href="paysuccess.html">支付成功</a>
 	<a href="payfailure.html">支付失败</a>
